Implementazione admin , bakery , ed maps, build pre disabilitazione ssr
