# BackEnd/src/main/java/it/uniromatre/breadexchange2_0/bakery/RandomDataBakeryResponse.java
@@ -1,0 +1,13 @@
+package it.uniromatre.breadexchange2_0.bakery;
+
+import lombok.Builder;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Builder
+public class RandomDataBakeryResponse {
+    Integer id;
+    String url;
+}
