# BackEnd/src/main/java/it/uniromatre/breadexchange2_0/controller/UserController.java
@@ -2,10 +2,12 @@ package it.uniromatre.breadexchange2_0.controller;
 
 import io.swagger.v3.oas.annotations.Parameter;
 import it.uniromatre.breadexchange2_0.bakery.registerRequest.BakeryRegisterRequest;
+import it.uniromatre.breadexchange2_0.common.PageResponse;
 import it.uniromatre.breadexchange2_0.token.tokenVerifyRequest;
 import it.uniromatre.breadexchange2_0.token.tokenVerifyResponse;
 import it.uniromatre.breadexchange2_0.user.UserFrontEndInfoResponse;
 import it.uniromatre.breadexchange2_0.user.UserFrontEndResponse;
+import it.uniromatre.breadexchange2_0.user.UserResponse;
 import it.uniromatre.breadexchange2_0.user.UserService;
 import it.uniromatre.breadexchange2_0.user.address.NewAddress;
 import it.uniromatre.breadexchange2_0.email.emailVerifyRequest;
@@ -122,6 +124,29 @@ public class UserController {
         userService.sendRequest(request, connectedUser);
         return ResponseEntity.accepted().build();
     }
+
+    @GetMapping("/isAdmin")
+    public Boolean isAdmin(
+            Authentication connectedUser
+    ){
+        return userService.isAdmin(connectedUser);
+    }
+
+
+    @GetMapping("/searchUserByName")
+    @PreAuthorize("hasAuthority('customer:read')")
+    public ResponseEntity<PageResponse<UserResponse>> searchUserByName(                                                 // Get All Users
+        @RequestParam(name = "name") String name,
+        @RequestParam(name = "page", defaultValue = "0", required = false) int page,
+        @RequestParam(name = "size", defaultValue = "10", required = false) int size
+    ){
+        return ResponseEntity.ok(userService.searchUserByName(page,size,name));
+    }
+
+
+
+
+
 
 
 
